Add integration tests
Solves TFT-1848.

This MR is adding 6 integration tests, each pipeline:

* tmt-container.yaml,
* tmt.yaml,
* sti.yaml,

times each ranch (redhat, public).

Together with that it is landing additional changes needed to make this working.

To try out the tests yourself:

Check out this branch.
Set up the development environment/cluster. Follow the steps in https://gitlab.com/testing-farm/infrastructure#user-content-terraform (but skip the last step, terraform destroy :)).
Run `make test-worker-redhat` or `make test-worker-public` in the repository root.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,21 @@
 *~
 
 terraform/environments/*/ranch/*/citool-config/environment.yaml
+
+# secrets
+.vault_pass
+
+# data maintained by direnv
+.direnv
+
+# pytest basedir
+.pytest
+
+# rendered template files
+**/.rendered
+
+# decrypted secrets
+**/*.decrypted
+
+# ansible roles from galaxy
+ansible/roles/geerlingguy.swap
