--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,14 +6,24 @@ authors = ["Miroslav Vadkerti <<mvadkert@redhat.com>>"]
 license = "Apache-2.0"
 
 [tool.poetry.dependencies]
-python = "^3.9"
-awscli = "^1.27.80"
+python = "~3.9"
+awscli = "1.25.21"
+ansible = "*"
 ansible-core = "^2.14.3"
-jinja2 = "^3.1.2"
+ansible-lint = "^4.0.0"
+ansible-vault = "^1.2.0"
+jinja2 = "^3.0.0"
 cryptography = "^2.9.2"
 yq = "^2.10.0"
-boto3 = "^1.26.80"
-"ruamel.yaml" = "^0.17.21"
+boto3 = "1.24.21"
+"ruamel.yaml" = "^0.16.12"
+tft-cli = "^0.0.5"
+markupsafe = "*"
+pytest-gluetool = {git = "https://gitlab.com/testing-farm/pytest-gluetool.git", rev = "main"}
+# TODO: gluetool *should* be deduced as a dependecy automatically from pytest-gluetool, but that does not happen.
+# Locking without implicitily stating gluetool here doesn't actually propagate the module to the lockfile.
+gluetool = "^2.3"
+yamllint = "^1.29.0"
 
 [tool.poetry.dev-dependencies]
 yamllint = "^1.28.0"
