--- a/ranch/public/citool-config/post-artifact-installation-map.yml
+++ b/ranch/public/citool-config/post-artifact-installation-map.yml
@@ -1,10 +1,9 @@
 ---
 - rule: "True"
   playbooks:
-  - /CONFIG/guest-setup/post-artifact-installation/entrypoint.yml
+    - /CONFIG/guest-setup/post-artifact-installation/entrypoint.yml
   extra_vars:
     TESTING_FARM_REQUEST_ID: "{{ TESTING_FARM_REQUEST_ID }}"
 
-
-- rule: COMPOSE.startswith('fedora-coreos')
+- rule: MATCH(GUEST.environment.compose, '^fedora-coreos.*')
   playbooks: []
