Revert "update config for 2023-03.1 release"
This reverts commit dd0426791146d8b1e136ec8a403e4e4249ab1cff.

--- a/ranch/public/citool-config/post-artifact-installation-map.yml
+++ b/ranch/public/citool-config/post-artifact-installation-map.yml
@@ -1,9 +1,10 @@
 ---
 - rule: "True"
   playbooks:
-    - /CONFIG/guest-setup/post-artifact-installation/entrypoint.yml
+  - /CONFIG/guest-setup/post-artifact-installation/entrypoint.yml
   extra_vars:
     TESTING_FARM_REQUEST_ID: "{{ TESTING_FARM_REQUEST_ID }}"
 
-- rule: MATCH(GUEST.environment.compose, '^fedora-coreos.*')
+
+- rule: COMPOSE.startswith('fedora-coreos')
   playbooks: []
