tests: add checks for xunit and junit results

--- a/tests/common.yaml
+++ b/tests/common.yaml
@@ -5,3 +5,4 @@
 #
 
 artemis_guestname_pattern: "[a-f0-9]{8}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{12}"
+hostname_ip_address_pattern: "(?:[a-zA-Z0-9\\.\\-_]+?|\\d+\\.\\d+\\.\\d+\\.\\d+)"
