--- a/tests/worker/public/pipeline/sti-x86_64-failure.yaml
+++ b/tests/worker/public/pipeline/sti-x86_64-failure.yaml
@@ -4,7 +4,7 @@ marks:
   - public
 
 variables:
-  REQUEST_ID: c6d64e54-e2e5-4e90-bde0-69e5a268bbd0
+  REQUEST_ID: edaf98e7-6215-4c0e-946b-d1e10c124803  # TODO: use a test in the official tests repo
 
 pipeline: |
   hide-secrets
@@ -31,14 +31,14 @@ checks:
     - "[testing-farm-request] Connected to Testing Farm Service 'https://internal.api.dev.testing-farm.io'"
     - "[testing-farm-request] Initialized with {{ REQUEST_ID }}"
     - "[artemis] Using Artemis API"
-    - "[git] <RemoteGitRepository(clone_url=https://gitlab.com/testing-farm/tests, branch=not specified, ref=main)>"
+    - "[git] <RemoteGitRepository(clone_url=https://gitlab.com/janhavlin/tests, branch=not specified, ref=main)>"
     - "[coldstore] For the pipeline artifacts, see https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}"
     - "[testing-farm-request-state-reporter] pipeline complete"
     - "[test-scheduler-sti] cloning repo"
     - "[test-schedule-runner] running test schedule of 1 entries:"
     - "[test-schedule-runner] 1 entries pending:"
     - "[test-schedule-runner] 0 entries pending:"
-    - "[test-schedule-report] Result of testing: PASSED"
+    - "[test-schedule-report] Result of testing: FAILED"
 
   literal-patterns:
     - "[artemis] [{{ artemis_guestname_pattern }}] Guest is being provisioned"
@@ -93,7 +93,7 @@ checks:
           - "git-main{{ '[0-9a-z_]+' }}/sti/tests.yaml"
           - CLEANUP
           - OK
-          - PASSED
+          - FAILED
           - "x86_64 Fedora-Rawhide S-"
           - "x86_64 Fedora-Rawhide S-"
           - sti
@@ -103,7 +103,7 @@ checks:
           - "git-main{{ '[0-9a-z_]+' }}/sti/tests.yaml"
           - COMPLETE
           - OK
-          - PASSED
+          - FAILED
           - "x86_64 Fedora-Rawhide S-"
           - "x86_64 Fedora-Rawhide S-"
           - sti
@@ -111,19 +111,19 @@ checks:
   literal-patterns[results-testing-farm-xunit.xml]:
     - |
       <?xml version="1.0" encoding="UTF-8"?>
-      <testsuites overall-result="passed">
+      <testsuites overall-result="failed">
        <properties>
-        <property name="baseosci.overall-result" value="passed"/>
+        <property name="baseosci.overall-result" value="failed"/>
        </properties>
-       <testsuite name="git-main{{ '.+' }}/sti/tests.yaml" result="passed" tests="1">
+       <testsuite name="git-main{{ '.+' }}/sti/tests.yaml" result="failed" tests="1">
         <logs>
          <log guest-setup-stage="pre_artifact_installation" href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/guest-setup-{{ artemis_guestname_pattern }}/guest-setup-output-pre-artifact-installation.txt" name="guest setup" schedule-stage="guest-setup"/>
          <log guest-setup-stage="post_artifact_installation" href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/guest-setup-{{ artemis_guestname_pattern }}/guest-setup-output-post-artifact-installation.txt" name="guest setup" schedule-stage="guest-setup"/>
         </logs>
         <properties>
-         <property name="baseosci.result" value="passed"/>
+         <property name="baseosci.result" value="failed"/>
         </properties>
-        <testcase name="sanity" result="pass">
+        <testcase name="sanity" result="fail">
          <properties>
           <property name="baseosci.arch" value="x86_64"/>
           <property name="baseosci.connectable_host" value="{{ hostname_ip_address_pattern }}"/>
@@ -133,9 +133,10 @@ checks:
           <property name="baseosci.variant" value=""/>
          </properties>
          <logs>
-          <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-tests.yaml{{ '.+' }}/tests-{{ '.+' }}/PASS-str_sanity.log" name="PASS-str_sanity.log" schedule-entry="git-main{{ '.+' }}/sti/tests.yaml" schedule-stage="running"/>
+          <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-tests.yaml{{ '.+' }}/tests-{{ '.+' }}/FAIL-str_sanity.log" name="FAIL-str_sanity.log" schedule-entry="git-main{{ '.+' }}/sti/tests.yaml" schedule-stage="running"/>
           <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-tests.yaml{{ '.+' }}/tests-{{ '.+' }}" name="log_dir" schedule-entry="git-main{{ '.+' }}/sti/tests.yaml" schedule-stage="running"/>
          </logs>
+         <failure/>
          <testing-environment name="requested">
           <property name="arch" value="x86_64"/>
           <property name="compose" value="Fedora-Rawhide"/>
@@ -154,10 +155,11 @@ checks:
     - |
       <?xml version="1.0" encoding="UTF-8"?>
       <testsuites>
-       <testsuite name="git-main{{ '.+' }}/sti/tests.yaml" tests="1" failures="0" errors="0" skipped="0">
+       <testsuite name="git-main{{ '.+' }}/sti/tests.yaml" tests="1" failures="1" errors="0" skipped="0">
         <testcase name="sanity" classname="tests">
-         <system-out>Hello Testing Farm
+         <system-out>Hello Testing Farm failure
       </system-out>
+         <failure type="FAIL" message='Test "sanity" failed.'/>
         </testcase>
        </testsuite>
       </testsuites>
