artemis: fix autosd image mappings
We need this to correctly map to the image name, withou the added `arch`
suffix.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/tests/worker/public/pipeline/tmt-container.yaml
+++ b/tests/worker/public/pipeline/tmt-container.yaml
@@ -99,4 +99,4 @@ checks:
     - "citool-debug\\.verbose\\.txt"
     - "git-main[a-z0-9]+"
     - "results\\.xml"
-    - "work-sanity[a-z0-9]+/tmt-reproducer\\.sh"
+    - "work-sanity[a-z0-9_]+/tmt-reproducer\\.sh"
