--- a/tests/worker/public/pipeline/tmt-container-secrets.yaml
+++ b/tests/worker/public/pipeline/tmt-container-secrets.yaml
@@ -53,6 +53,7 @@ checks:
               }
           ],
           "plan": "/testing-farm/sanity",
+          "plan_filter": "<not applicable>",
           "ref": "main",
           "type": "fmf",
           "url": "https://gitlab.com/testing-farm/tests",
@@ -123,4 +124,4 @@ checks:
     - "citool-debug\\.verbose\\.txt"
     - "git-main[a-z0-9]+"
     - "results\\.xml"
-    - "work-sanity[a-z0-9]+/tmt-reproducer\\.sh"
+    - "work-sanity[a-z0-9_]+/tmt-reproducer\\.sh"
