--- a/tests/worker/public/pipeline/tmt-x86_64-hardware.yaml
+++ b/tests/worker/public/pipeline/tmt-x86_64-hardware.yaml
@@ -106,4 +106,4 @@ checks:
     - "citool-debug\\.txt"
     - "citool-debug\\.verbose\\.txt"
     - "results\\.xml"
-    - "work-sanity[a-z0-9_]+/tmt-reproducer.sh"
+    - "work-sanity[a-z0-9_]+/tmt-reproducer\\.sh"
