--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/enable-extras.yml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/enable-extras.yml
@@ -1,9 +1,10 @@
+---
 - block:
   - name: Add RHEL7 Extras repository
     yum_repository:
       name: rhel-extras
       description: rhel-extras
-      baseurl: "http://download.eng.brq.redhat.com/rhel-7/rel-eng/EXTRAS-7/latest-EXTRAS-{{ ansible_distribution_version }}-RHEL-7/compose/Server/x86_64/os/"
+      baseurl: "http://download.eng.brq.redhat.com/rhel-7/rel-eng/EXTRAS-7/latest-EXTRAS-{{ ansible_distribution_version }}-RHEL-7/compose/Server/{{ ansible_architecture }}/os/"
       enabled: true
       gpgcheck: false
       skip_if_unavailable: true
