--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -125,7 +125,7 @@ test/dev:
     SCRIPT: >-
       make init-dev &&
       make apply-dev &&
-      WORKER_IMAGE="quay.io/testing-farm/worker:2023-03.2" PYTEST_OPTIONS="-k 'not container'" make test-worker-public
+      PYTEST_OPTIONS="-k 'not container'" make test-worker-public
     AFTER_SCRIPT: make destroy-dev > /dev/null
   rules:
     - !reference [.rules, not_default_branch]
