redhat/guest-setup: add setting of valid AWS hostname
For AWS machines we need to set a valid hostname, because
the IT implementation sets the hostname after the machine had
been booted.

Resolves TFT-1987

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/entrypoint.yml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/entrypoint.yml
@@ -22,3 +22,5 @@
   # OSCI users expect buildroot to be enabled by default
   # https://projects.engineering.redhat.com/browse/TFT-619
   - include_tasks: enable-buildroot.yml
+  # TFT-1987 - Hostname on AWS needs to be explicitely set
+  - include_tasks: aws-hostname.yml
