Add terminate-artemis-guests-dev Makefile target
This removes all instances created by Artemis from the dev environment.

Intended to be used in Gitlab CI to cleanup all instances before
Terraform starts to remove the security group. This causes a race
condition if Artemis is not quick enough. We are in this trouble
as those instances are managed by Artemis, not Terraform.

Should resolve problems like:

```
│ Error: deleting Security Group (sg-084fc835b8f5975e7): DependencyViolation: resource sg-084fc835b8f5975e7 has a dependent object
│ 	status code: 400, request id: fc9fc7ab-c642-4fb6-848d-2a26ff1bb8ac
```

When cleaning up dev environment.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,7 +79,6 @@ direnv:
     # WORKAROUND: gitlab runner is hosted on the same network as staging/production
     #             what is breaking DNS resolving, as AWS DNS resolves k8s API locally
     - echo "nameserver 8.8.8.8" > /etc/resolv.conf
-    - echo "nameserver 8.8.4.4" >> /etc/resolv.conf
   script:
     - eval "$(direnv export bash)"
 
@@ -122,10 +121,11 @@ test/dev:
   variables:
     TF_VAR_cluster_name: testing-farm-gitlab-ci-$CI_JOB_ID
     SCRIPT_DIR: terraform/environments/dev
+    PYTEST_OPTIONS: -k 'not container'
     SCRIPT: >-
       make init-dev &&
       make apply-dev &&
-      WORKER_IMAGE="quay.io/testing-farm/worker:2023-03.2" PYTEST_OPTIONS="-k 'not container'" make test-worker-public
+      make test-worker-public
     AFTER_SCRIPT: make destroy-dev > /dev/null
   rules:
     - !reference [.rules, not_default_branch]
