--- a/tests/worker/public/pipeline/tmt-container-secrets.yaml
+++ b/tests/worker/public/pipeline/tmt-container-secrets.yaml
@@ -29,7 +29,7 @@ checks:
     - "[coldstore] For the pipeline artifacts, see https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}"
     - "[testing-farm-request-state-reporter] pipeline complete"
     - "[test-schedule-tmt] cloning repo https://gitlab.com/testing-farm/tests (branch not specified, ref main)"
-    - "[worker_0] [stderr] [None:x86_64:/testing-farm/sanity]             00:00:00 pass /testing-farm/script [1/1]"
+    - "[worker_0] [stderr] [None:x86_64:/testing-farm/sanity]             00:00:00 pass /testing-farm/script (on default-0) [1/1]"
     - "[test-schedule-report] Result of testing: PASSED"
     - "[test-schedule-runner] 1 entries pending:"
     - "[test-schedule-runner] 0 entries pending:"
