pre-commit: pass project to use the new endpoint
See https://gitlab.com/devopshq/gitlab-ci-linter/-/blob/master/gitlab_ci_linter/__init__.py#L62

Thanks to @efedin for noticing!

Without this the hook fails for me.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -37,6 +37,9 @@ repos:
     rev: v1.0.2
     hooks:
       - id: gitlab-ci-linter
+        args:
+          - "--project"
+          - "testing-farm/infrastructure"
 
   # Disallow `.yml` files in the repo, i.e. assume usage of `.yaml` for YAML
   - repo: local
